# multi-agent-research

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  test_research.py
.github/ISSUE_TEMPLATE/: bug_report.md
agents/: base_agent.py  fact_checker.py  lead_researcher.py  quality_controller.py  research_crew.py  source_evaluator.py  sub_researcher.py
config/: models.yaml
docs/: agent_architecture.md  generate_diagrams.py  view_architecture.html
src/: bedrock_client.py  config.py  exceptions.py  rate_limiter.py  research_database.py  security.py  thought_logger.py
tools/: crewai_search_tool.py  search_tool.py
ui/: gradio_app.py
